[package]
name = "imgui-macroquad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

[dependencies.imgui]
version = "0.11.0"

[dependencies.macroquad]
version = "0.4.4"
optional = true
default-features = false

[dependencies.miniquad]
version = "^0.4.0-alpha"

[dependencies.glam]
version = "^0"

[features]
default = ["macroquad"]